--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.gradientBtn {
+    background: linear-gradient(to left, #5aaa4f, #407939);
+  }
+
+.shadow-components {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: 1px solid #F0F0F0;
+}
+  
